profilelist1exp/unpackaged/objects/Sales_Motion_Mappings__c.object
<CustomObject>
    <description>The tools for Stage and Country value maintenance in SFDC and SalesEdge</description>
    <fields>
        <fullName>Language_Code_for_SM_Configuration__c</fullName>
        <label>Language Code for SM Configuration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language_for_SM_Configuration__c</fullName>
        <label>Language for SM Configuration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesEdge_BusinessUnit__c</fullName>
        <label>SalesEdge Business Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesEdge_Country__c</fullName>
        <label>SalesEdge Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesEdge_Opportunity_Stage__c</fullName>
        <label>SalesEdge Opportunity Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesEdge_Region__c</fullName>
        <label>SalesEdge Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesForce_BusinessUnit__c</fullName>
        <label>Salesforce Business Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_Country__c</fullName>
        <label>Salesforce Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_Opportunity_Stage__c</fullName>
        <label>Salesforce Opportunity Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_Region__c</fullName>
        <label>Salesforce Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Sales Motion Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sales Motion Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Motion Mappings</pluralLabel>
    <recordTypes>
        <fullName>Sales_Motion_Business_Unit</fullName>
        <active>true</active>
        <label>Sales Motion Business Unit</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Motion_Country</fullName>
        <active>true</active>
        <label>Sales Motion Country</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Motion_Language</fullName>
        <active>true</active>
        <label>Sales Motion Language</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Motion_Region</fullName>
        <active>true</active>
        <label>Sales Motion Region</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Motion_Stage</fullName>
        <active>true</active>
        <label>Sales Motion Stage</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>